test: TableGroupService 테스트 추가